--- a/src/app/pages/MapEditor/style.scss
+++ b/src/app/pages/MapEditor/style.scss
@@ -76,7 +76,7 @@
   vertical-align: top;
   margin-right: 10px;
   padding: 10px;
-  border: 1px solid grey;
+  background-color: #eee;
 
   b {
     display: inline-block;
