--- a/src/app/pages/MapEditor/style.scss
+++ b/src/app/pages/MapEditor/style.scss
@@ -11,21 +11,21 @@
 .block {
   position: absolute;
   display: block;
-  width: 64px;
-  height: 64px;
+  width: 32px;
+  height: 32px;
   cursor: pointer;
 
   &.active {
     border: 2px solid blue;
 
     .tile {
-      line-height: 60px;
+      line-height: 28px;
     }
   }
 
   .tile {
     font-size: 25px;
-    line-height: 64px;
+    line-height: 32px;
     text-align: center;
   }
 
@@ -72,9 +72,9 @@
 }
 
 .hints {
-  float: right;
+  display: inline-block;
   vertical-align: top;
-  margin-right: 10px;
+  margin-bottom: 20px;
   padding: 10px;
   background-color: #eee;
 
@@ -83,4 +83,23 @@
     font-weight: bold;
     min-width: 50px;
   }
+}
+
+.objectSettings {
+  display: inline-block;
+  vertical-align: top;
+  margin-bottom: 20px;
+  margin-left: 10px;
+  padding: 10px;
+  background-color: #eee;
+
+  b {
+    display: inline-block;
+    font-weight: bold;
+    min-width: 50px;
+  }
+}
+
+textarea.invalid {
+  background-color: #f99;
 }
